# Energy_Meter_Linux

./: CMakeLists.txt  README.md  logger.py
.cache/clangd/index/: Energy_Meter.c.6C7A56245CF644E2.idx  esp_lcd_panel_ssd1306.c.91B13983EE233A2A.idx  esp_lcd_panel_ssd1306.h.F6DCA2B08064103B.idx  ina226.c.435CECF2267BDB48.idx  ina226.h.A5F8E8A7C2B93E14.idx  oled_init.c.A2195A52BC9E06E4.idx  oled_init.h.873091AAE72BDA0E.idx
communicate_init/: CMakeLists.txt  spi_init.c  spi_init.h
components/display/: CMakeLists.txt  oled_init.c  oled_init.h  oled_int.h
components/esp_ina226/: CMakeLists.txt  README.md  idf_component.yml  ina226.c  library.json
components/esp_ina226/include/: ina226.h  ina226_version.h
components/ssd1306/: CMakeLists.txt
data_logs/: ina_test.csv
main/: CMakeLists.txt  Energy_Meter.c  idf_component.yml
